# codebox-api

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  roadmap.todo  sitemap.xml
.github/workflows/: auto-tests.yml  code-check.yml  docs.yml  pre-commit.yml  python-publish.yml
api/: index.html
codeboxapi/: __init__.py  codebox.py  config.py  errors.py  schema.py  utils.py
codeboxapi/box/: __init__.py  basebox.py  codebox.py  localbox.py
codeboxapi/files/: async_dataset_code.py
concepts/: index.html
docs/: api.md  concepts.md  examples.md  getting_started.md  index.md  installation.md  quickstart.md  settings.md  usage.md
docs/api/: codebox.md  exceptions.md  settings.md  types.md
docs/concepts/: architecture.md  components.md  data_structures.md  implementations.md
docs/examples/: advanced.md  async.md  basic.md  files.md
docs/guides/: basic.md  files.md  packages.md
docs/tutorial/: advanced_features.md  conclusion.md  core_functionality.md  error_handler.md  setup.md
example/: async_dataset.py  file_io.py  plot_dataset.py
examples/: async_example.py  async_file_io.py  async_plot_dataset.py  big_upload.py  big_upload_from_url.py  docker.py  docker_parallel_execution.py  file_conversion.py  file_io.py  getting_started.py  index.html  localbox.py  parallel.py  plot_dataset.py  session_restoring.py  stream_chunk_timing.py
examples/assets/: advertising.csv  dataset_code.txt
examples/async/: file_io.py  plot_dataset.py
installation/: index.html
scripts/: build.sh  dev-setup.sh
settings/: index.html
src/codeboxapi/: __init__.py  api.py  codebox.py  config.py  docker.py  errors.py  local.py  remote.py  schema.py  types.py  utils.py
src/codeboxapi/box/: __init__.py  base.py  basebox.py  codebox.py  factory.py  local.py  localbox.py  remote.py
src/container/: Dockerfile  api.py  build.sh  requirements.txt
tests/: conftest.py  create_test.py  general_test.py  hello_world_test.py  parametric_test.py  run_all_examples.py  run_examples_test.py  simple_test.py  test_v01.py  test_v01_general.py  test_v02.py
usage/: index.html
