[project]
name = "codeboxapi"
version = "0.2.0"
description = "CodeBox gives you an easy scalable and isolated python interpreter for your LLM Agents."
keywords = [
    "codeboxapi",
    "code-interpreter",
    "codebox-api",
    "language model",
    "codeinterpreterapi",
]
authors = [{ name = "Shroominic", email = "contact@shroominic.com" }]
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",     # todo check if really needed
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.urls]
repository = "https://github.com/shroominic/codebox-api"
api-reference = "https://codeboxapi.com/docs"
docs = "https://codeboxapi.com/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "codeboxapi[all]",
    "mypy>=1.8",
    "ruff>=0.1",
    "pytest-asyncio>=0.23.7",
    # docs
    "neoteroi-mkdocs>=1",
    "mkdocs-material>=9",
]

[project.optional-dependencies]
local = ["jupyter-client", "ipykernel"]
image = ["Pillow"]
all = ["codeboxapi[local]", "codeboxapi[image]"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/codeboxapi"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E701"]

[tool.ruff.format]
preview = true
