[project]
name = "codeboxapi"
version = "0.2.0"
description = "CodeBox gives you an easy scalable and isolated python interpreter for your LLM Agents."
keywords = [
    "codeboxapi",
    "code-interpreter",
    "codebox-api",
    "language model",
    "codeinterpreterapi",
]
authors = [{ name = "Shroominic", email = "contact@shroominic.com" }]
dependencies = ["pydantic>=2", "pydantic-settings>=2", "httpx>=0.27"]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.urls]
repository = "https://github.com/shroominic/codebox-api"
api-reference = "https://codeboxapi.com/docs"
docs = "https://codeboxapi.com/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "codeboxapi[all]",
    "codeboxapi[docs]",
    "codeboxapi[pytest]",
    "ruff",
    "mypy",
    "types-aiofiles>=24",
    "fastapi>=0.111.0",
]

[project.optional-dependencies]
docs = ["neoteroi-mkdocs", "mkdocs-material"]
pytest = ["pytest-asyncio"]
local = ["jupyter-client", "ipykernel", "uv", "aiofiles"]
vision = ["Pillow"]
data-science = [
    "codeboxapi[local]",
    "codeboxapi[vision]",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "uv",
    "bokeh",
    "dash",
    "matplotlib",
    "networkx",
    "numpy",
    "openpyxl",
    "pandas",
    "pillow",
    "plotly",
    "python-docx",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "sympy",
    "yfinance",
]
all = ["codeboxapi[data-science]"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/codeboxapi"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E701"]

[tool.ruff.format]
preview = true
