[project]
name = "codeboxapi"
version = "0.2.5"
description = "CodeBox gives you an easy scalable and isolated python interpreter for your LLM Agents."
keywords = [
    "codeboxapi",
    "code-interpreter",
    "codebox-api",
    "language model",
    "codeinterpreterapi",
    "code sandbox",
    "codebox",
    "agent infrastructure",
    "agents",
    "agent sandbox",
]
authors = [{ name = "Shroominic", email = "contact@shroominic.com" }]
dependencies = ["httpx>=0.27"]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.urls]
repository = "https://github.com/shroominic/codebox-api"
api-reference = "https://codeboxapi.com/docs"
docs = "https://codeboxapi.com/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "codeboxapi[all]",
    "codeboxapi[docs]",
    "codeboxapi[pytest]",
    "codeboxapi[serve]",
    "ruff",
    "mypy",
    "types-aiofiles>=24",
    "types-pillow>=10",
]

[project.optional-dependencies]
docs = ["neoteroi-mkdocs", "mkdocs-material"]
pytest = ["pytest-asyncio"]
local = ["jupyter-client", "ipykernel", "uv", "aiofiles"]
vision = ["Pillow"]
serve = ["fastapi[standard]"]
data-science = [
    "codeboxapi[local]",
    "codeboxapi[vision]",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "uv",
    "bokeh",
    "dash",
    "matplotlib",
    "networkx",
    "numpy",
    "openpyxl",
    "pandas",
    "pillow",
    "plotly",
    "python-docx",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "sympy",
    "yfinance",
]
all = ["codeboxapi[data-science]", "codeboxapi[serve]"]

[project.scripts]
codeboxapi-serve = "codeboxapi.api:serve"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/codeboxapi"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E701"]

[tool.ruff.format]
preview = true
